--- a/codebase/static/css/landing.css
+++ b/codebase/static/css/landing.css
@@ -177,7 +177,7 @@
   }
 
   .landing__description {
-    padding: 14px 40px;
+    padding: 14px 30px;
   }
 
   .landing-section {
